--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,13 @@ body {
     color: var(--mainWhite);
 }
 
+#clock {
+    font-size: 36px;
+    display: block;
+    padding: 5px 0px;
+    color: var(--mainWhite);
+}
+
 h5 {
     font-size: 3rem;
     margin: 2rem;
@@ -44,10 +51,13 @@ input {
     border: 1px solid var(--mainWhite);
 }
 
-button {
+button, select {
     cursor: pointer;
     font-size: 1.2rem;
     padding: .4rem;
+}
+
+button {
     background-color: transparent;
     color: var(--mainWhite);
     border: 1px solid var(--mainWhite);
@@ -79,13 +89,32 @@ p {
     transform: rotate(45deg);
     height: 20px;
     width: 7px;
-    left: 110px;
+    left: 40px;
+}
+
+select {
+    background-color: var(--mainWhite);
+    color: var(--mainBlack);
+}
+
+.reminderButton {
+    background-color: var(--mainBlack);
+    border: var(--mainBlack);
 }
 
 .item {
     display: flex;
     justify-content: space-between;
-    padding: .5rem 16%;
+    padding: .5rem 5%;
+}
+
+.item-icons {
+    display: flex;
+}
+
+.edit,
+.delete {
+    margin-left: 10px;
 }
 
 .edit {
